--- a/archives/toutiao-search/2024-02-02.md
+++ b/archives/toutiao-search/2024-02-02.md
@@ -1,67 +1,77 @@
 # 2024-02-02
 
-共 331 条
+共 340 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Feb 02 2024 22:00:53 GMT+0800 (China Standard Time) -->
-1. [2024抖音小年夜晚会](https://so.toutiao.com/search?keyword=2024抖音小年夜晚会)
-1. [体校通报杨倩教练虞利华讨要奖金](https://so.toutiao.com/search?keyword=体校通报杨倩教练虞利华讨要奖金)
-1. [各地欢欢喜喜迎春节](https://so.toutiao.com/search?keyword=各地欢欢喜喜迎春节)
+<!-- 最后更新时间 Fri Feb 02 2024 23:00:41 GMT+0800 (China Standard Time) -->
+1. [男子深夜喝酒回家持刀殴打妻子](https://so.toutiao.com/search?keyword=男子深夜喝酒回家持刀殴打妻子)
 1. [暴雪后河南交警“以身试滑”](https://so.toutiao.com/search?keyword=暴雪后河南交警“以身试滑”)
+1. [各地欢欢喜喜迎春节](https://so.toutiao.com/search?keyword=各地欢欢喜喜迎春节)
+1. [董宇辉俞敏洪访谈张艺谋](https://so.toutiao.com/search?keyword=董宇辉俞敏洪访谈张艺谋)
 1. [中方：谢谢美国提醒 不会让其得逞](https://so.toutiao.com/search?keyword=中方：谢谢美国提醒+不会让其得逞)
-1. [董宇辉访谈刘德华全程在尬聊吗](https://so.toutiao.com/search?keyword=董宇辉访谈刘德华全程在尬聊吗)
-1. [为何南北小年差一天](https://so.toutiao.com/search?keyword=为何南北小年差一天)
-1. [贪官全家6人被留置创下湖南省之最](https://so.toutiao.com/search?keyword=贪官全家6人被留置创下湖南省之最)
-1. [2024央视网络春晚](https://so.toutiao.com/search?keyword=2024央视网络春晚)
-1. [网友实拍许广高速堵车](https://so.toutiao.com/search?keyword=网友实拍许广高速堵车)
-1. [郑州地铁违反交规被“扣车”不实](https://so.toutiao.com/search?keyword=郑州地铁违反交规被“扣车”不实)
-1. [贵州办酒席有多离谱](https://so.toutiao.com/search?keyword=贵州办酒席有多离谱)
-1. [中石油原董事长王宜林被查](https://so.toutiao.com/search?keyword=中石油原董事长王宜林被查)
-1. [张艺谋董宇辉同框说陕西话](https://so.toutiao.com/search?keyword=张艺谋董宇辉同框说陕西话)
 1. [比利时诱捕300万只大闸蟹](https://so.toutiao.com/search?keyword=比利时诱捕300万只大闸蟹)
 1. [安徽一女子拍下罕见“冰针”雪](https://so.toutiao.com/search?keyword=安徽一女子拍下罕见“冰针”雪)
-1. [董宇辉俞敏洪访谈张艺谋](https://so.toutiao.com/search?keyword=董宇辉俞敏洪访谈张艺谋)
-1. [女孩婚礼取消7个环节](https://so.toutiao.com/search?keyword=女孩婚礼取消7个环节)
+1. [体校通报杨倩教练虞利华讨要奖金](https://so.toutiao.com/search?keyword=体校通报杨倩教练虞利华讨要奖金)
+1. [叶府婚宴](https://so.toutiao.com/search?keyword=叶府婚宴)
+1. [中石油原董事长王宜林被查](https://so.toutiao.com/search?keyword=中石油原董事长王宜林被查)
+1. [郑州地铁违反交规被“扣车”不实](https://so.toutiao.com/search?keyword=郑州地铁违反交规被“扣车”不实)
+1. [张艺谋：创新是很冒险的](https://so.toutiao.com/search?keyword=张艺谋：创新是很冒险的)
+1. [董宇辉访谈刘德华全程在尬聊吗](https://so.toutiao.com/search?keyword=董宇辉访谈刘德华全程在尬聊吗)
+1. [有女朋友还和别人接吻](https://so.toutiao.com/search?keyword=有女朋友还和别人接吻)
+1. [对手乌龙球 约旦队跻身亚洲杯4强](https://so.toutiao.com/search?keyword=对手乌龙球+约旦队跻身亚洲杯4强)
 1. [癌症能预防吗](https://so.toutiao.com/search?keyword=癌症能预防吗)
-1. [被撒盐的主家办的剃头酒是什么](https://so.toutiao.com/search?keyword=被撒盐的主家办的剃头酒是什么)
+1. [2024央视网络春晚](https://so.toutiao.com/search?keyword=2024央视网络春晚)
+1. [为何南北小年差一天](https://so.toutiao.com/search?keyword=为何南北小年差一天)
+1. [药明康德背后的水有多深](https://so.toutiao.com/search?keyword=药明康德背后的水有多深)
+1. [昔日“公募一哥”王亚伟被曝失联多日](https://so.toutiao.com/search?keyword=昔日“公募一哥”王亚伟被曝失联多日)
 1. [车祸现场一男子抱着人哭喊：你起来](https://so.toutiao.com/search?keyword=车祸现场一男子抱着人哭喊：你起来)
-1. [合肥环卫工人用毛巾擦树枝？官方回应](https://so.toutiao.com/search?keyword=合肥环卫工人用毛巾擦树枝？官方回应)
 1. [郑州男子被堵高速饿得前胸贴后背](https://so.toutiao.com/search?keyword=郑州男子被堵高速饿得前胸贴后背)
+1. [长春“雪饼猴”吃上麻辣烫了](https://so.toutiao.com/search?keyword=长春“雪饼猴”吃上麻辣烫了)
+1. [贵州办酒席有多离谱](https://so.toutiao.com/search?keyword=贵州办酒席有多离谱)
+1. [张艺谋董宇辉同框说陕西话](https://so.toutiao.com/search?keyword=张艺谋董宇辉同框说陕西话)
 1. [黄晓明担任影协副主席被质疑](https://so.toutiao.com/search?keyword=黄晓明担任影协副主席被质疑)
 1. [恒大地产未能清偿债务2978.1亿元](https://so.toutiao.com/search?keyword=恒大地产未能清偿债务2978.1亿元)
+1. [网友实拍许广高速堵车](https://so.toutiao.com/search?keyword=网友实拍许广高速堵车)
+1. [女孩婚礼取消7个环节](https://so.toutiao.com/search?keyword=女孩婚礼取消7个环节)
+1. [合肥环卫工人用毛巾擦树枝？官方回应](https://so.toutiao.com/search?keyword=合肥环卫工人用毛巾擦树枝？官方回应)
+1. [落马官员家里高档酒装了3辆货车](https://so.toutiao.com/search?keyword=落马官员家里高档酒装了3辆货车)
+1. [为何吴谢宇春节前执行死刑](https://so.toutiao.com/search?keyword=为何吴谢宇春节前执行死刑)
 1. [马英九：支持蔡英文登太平岛](https://so.toutiao.com/search?keyword=马英九：支持蔡英文登太平岛)
+1. [贪官全家6人被留置创下湖南省之最](https://so.toutiao.com/search?keyword=贪官全家6人被留置创下湖南省之最)
+1. [李梦晒出征照：中国女篮加油](https://so.toutiao.com/search?keyword=李梦晒出征照：中国女篮加油)
+1. [郑爽仍有3856万赔付款未履行](https://so.toutiao.com/search?keyword=郑爽仍有3856万赔付款未履行)
+1. [董洁儿子近照曝光](https://so.toutiao.com/search?keyword=董洁儿子近照曝光)
+1. [机构投资者以史上罕见速度撤离美股](https://so.toutiao.com/search?keyword=机构投资者以史上罕见速度撤离美股)
+1. [丈夫半夜接到老家电话冒雨雪往回赶](https://so.toutiao.com/search?keyword=丈夫半夜接到老家电话冒雨雪往回赶)
+1. [本轮雨雪冰冻天气将进入最强时段](https://so.toutiao.com/search?keyword=本轮雨雪冰冻天气将进入最强时段)
+1. [标普中国被央行警告并罚款212万元](https://so.toutiao.com/search?keyword=标普中国被央行警告并罚款212万元)
+1. [消防员偷戴女友戒指被卡](https://so.toutiao.com/search?keyword=消防员偷戴女友戒指被卡)
+1. [河南网友返乡凌晨因降雪被困服务区](https://so.toutiao.com/search?keyword=河南网友返乡凌晨因降雪被困服务区)
+1. [被撒盐的主家办的剃头酒是什么](https://so.toutiao.com/search?keyword=被撒盐的主家办的剃头酒是什么)
+1. [俄从台进口精密仪器？外交部回应](https://so.toutiao.com/search?keyword=俄从台进口精密仪器？外交部回应)
+1. [中山二院集体患癌事件后续如何](https://so.toutiao.com/search?keyword=中山二院集体患癌事件后续如何)
+1. [亲戚借10万15年才还连句感谢都没有](https://so.toutiao.com/search?keyword=亲戚借10万15年才还连句感谢都没有)
+1. [酒店回应仲裁输了赔员工7千硬币](https://so.toutiao.com/search?keyword=酒店回应仲裁输了赔员工7千硬币)
+1. [唐磊晶当选佛山市高明区区长](https://so.toutiao.com/search?keyword=唐磊晶当选佛山市高明区区长)
+1. [行长回应男子取没拆封的纸币少3张](https://so.toutiao.com/search?keyword=行长回应男子取没拆封的纸币少3张)
+1. [2024抖音小年夜晚会](https://so.toutiao.com/search?keyword=2024抖音小年夜晚会)
 1. [《目中无人2》首映杨恩又展示武术](https://so.toutiao.com/search?keyword=《目中无人2》首映杨恩又展示武术)
-1. [有女朋友还和别人接吻](https://so.toutiao.com/search?keyword=有女朋友还和别人接吻)
 1. [2023财政收支账单发布](https://so.toutiao.com/search?keyword=2023财政收支账单发布)
 1. [名嘴：赖清德权力跛脚危机近在眼前](https://so.toutiao.com/search?keyword=名嘴：赖清德权力跛脚危机近在眼前)
-1. [落马官员家里高档酒装了3辆货车](https://so.toutiao.com/search?keyword=落马官员家里高档酒装了3辆货车)
-1. [药明康德背后的水有多深](https://so.toutiao.com/search?keyword=药明康德背后的水有多深)
-1. [郑爽仍有3856万赔付款未履行](https://so.toutiao.com/search?keyword=郑爽仍有3856万赔付款未履行)
 1. [女子带妈妈一起回婆婆家过年](https://so.toutiao.com/search?keyword=女子带妈妈一起回婆婆家过年)
 1. [我在村里过小年](https://so.toutiao.com/search?keyword=我在村里过小年)
 1. [女子捐赠灾区物资被弄丢 邮政道歉](https://so.toutiao.com/search?keyword=女子捐赠灾区物资被弄丢+邮政道歉)
-1. [昔日“公募一哥”王亚伟被曝失联多日](https://so.toutiao.com/search?keyword=昔日“公募一哥”王亚伟被曝失联多日)
 1. [商务部将推动汽车以旧换新有何影响](https://so.toutiao.com/search?keyword=商务部将推动汽车以旧换新有何影响)
-1. [长春“雪饼猴”吃上麻辣烫了](https://so.toutiao.com/search?keyword=长春“雪饼猴”吃上麻辣烫了)
 1. [拜登访大选关键州 当地人不买账](https://so.toutiao.com/search?keyword=拜登访大选关键州+当地人不买账)
 1. [马杜罗：委内瑞拉不惧怕美国制裁](https://so.toutiao.com/search?keyword=马杜罗：委内瑞拉不惧怕美国制裁)
-1. [叶府婚宴](https://so.toutiao.com/search?keyword=叶府婚宴)
-1. [消防员偷戴女友戒指被卡](https://so.toutiao.com/search?keyword=消防员偷戴女友戒指被卡)
 1. [浓眉：我们离西部第六也没差多远](https://so.toutiao.com/search?keyword=浓眉：我们离西部第六也没差多远)
-1. [行长回应男子取没拆封的纸币少3张](https://so.toutiao.com/search?keyword=行长回应男子取没拆封的纸币少3张)
-1. [丈夫半夜接到老家电话冒雨雪往回赶](https://so.toutiao.com/search?keyword=丈夫半夜接到老家电话冒雨雪往回赶)
 1. [问界首次成为新势力月度销冠](https://so.toutiao.com/search?keyword=问界首次成为新势力月度销冠)
-1. [标普中国被央行警告并罚款212万元](https://so.toutiao.com/search?keyword=标普中国被央行警告并罚款212万元)
-1. [中山二院集体患癌事件后续如何](https://so.toutiao.com/search?keyword=中山二院集体患癌事件后续如何)
-1. [为何吴谢宇春节前执行死刑](https://so.toutiao.com/search?keyword=为何吴谢宇春节前执行死刑)
 1. [26座GDP万亿城市折射新活力](https://so.toutiao.com/search?keyword=26座GDP万亿城市折射新活力)
 1. [正直播董宇辉俞敏洪访谈张艺谋](https://so.toutiao.com/search?keyword=正直播董宇辉俞敏洪访谈张艺谋)
 1. [网传合肥用毛巾擦树枝](https://so.toutiao.com/search?keyword=网传合肥用毛巾擦树枝)
 1. [人民日报评奔驰车男子砸引擎盖事件](https://so.toutiao.com/search?keyword=人民日报评奔驰车男子砸引擎盖事件)
-1. [机构投资者以史上罕见速度撤离美股](https://so.toutiao.com/search?keyword=机构投资者以史上罕见速度撤离美股)
 1. [A股各核心宽基指数估值处历史低位](https://so.toutiao.com/search?keyword=A股各核心宽基指数估值处历史低位)
 1. [悬溺响了但刘德华和宁浩是HE](https://so.toutiao.com/search?keyword=悬溺响了但刘德华和宁浩是HE)
-1. [亲戚借10万15年才还连句感谢都没有](https://so.toutiao.com/search?keyword=亲戚借10万15年才还连句感谢都没有)
 1. [名嘴谈韩国瑜当选感谢词未提民众党](https://so.toutiao.com/search?keyword=名嘴谈韩国瑜当选感谢词未提民众党)
 1. [中国女篮赴西安备战奥运资格赛](https://so.toutiao.com/search?keyword=中国女篮赴西安备战奥运资格赛)
 1. [港媒：“立院”蓝白可严格监督绿营](https://so.toutiao.com/search?keyword=港媒：“立院”蓝白可严格监督绿营)
@@ -170,7 +180,6 @@
 1. [山东高速发生严重事故 多车撞损](https://so.toutiao.com/search?keyword=山东高速发生严重事故+多车撞损)
 1. [浦东机场禁网约车和空港出行有关吗](https://so.toutiao.com/search?keyword=浦东机场禁网约车和空港出行有关吗)
 1. [铁路客服回应乘客质疑少一节车厢](https://so.toutiao.com/search?keyword=铁路客服回应乘客质疑少一节车厢)
-1. [男子深夜喝酒回家持刀殴打妻子](https://so.toutiao.com/search?keyword=男子深夜喝酒回家持刀殴打妻子)
 1. [四川一落马干部被判13年](https://so.toutiao.com/search?keyword=四川一落马干部被判13年)
 1. [全红婵备战多哈世锦赛](https://so.toutiao.com/search?keyword=全红婵备战多哈世锦赛)
 1. [韩国瑜：感谢江启臣一路走来陪着我](https://so.toutiao.com/search?keyword=韩国瑜：感谢江启臣一路走来陪着我)
